# auto-analysis-tool

./: .gitignore  Makefile  README.md  pyproject.toml
.github/workflows/: ci.yml
archive/: README.md
archive/legacy_demo/rapid_prototype/: README.md  main.py
archive/legacy_demo/rapid_prototype/app/: __init__.py  analyzer.py  models.py  reporter.py  repository.py
archive/legacy_demo/rapid_prototype/data/profiling/: hunyuan_video_optimized.json  qwen2_5_rl_demo_optimized.json
archive/legacy_demo/rapid_prototype/data/runs/: pi0_infer_with_torch_baseline.json  (+1 more)
docs/: README.md  architecture.md  data_contract.md  how_to_add_a_model.md  migration.md
docs/strategy/: 00_start_here.md  01_goals_and_closures.md  02_execution_plan.md  03_recipe_inventory.csv  03_recipe_inventory.md  04_v1_integration_spec.md  05_recipe_admission_rules.md  README.md
examples/profiling/: hunyuan_video_baseline.json  pi0_infer_with_torch_baseline.json  pi0_infer_with_torch_optimized.json  qwen2_5_rl_demo_baseline.json
examples/recipes/hunyuan_video/: recipe.yaml
examples/recipes/pi0_infer_with_torch/: recipe.yaml
examples/recipes/qwen2_5_rl_demo/: recipe.yaml
examples/runs/: hunyuan_video_baseline.json  hunyuan_video_optimized.json  pi0_infer_with_torch_optimized.json  qwen2_5_rl_demo_baseline.json
examples/templates/: README.md  RECIPE_README.md  profiling.json  recipe.yaml  requirements.txt  run.json  run.sh
src/auto_analysis_tool/: __init__.py  __main__.py  analyzer.py  cli.py  models.py  reporting.py  repository.py  validators.py
tests/: test_cli.py  test_repository.py
(+3 files in other folders)
